--- a/src/App/components/Button/Button.module.css
+++ b/src/App/components/Button/Button.module.css
@@ -3,5 +3,11 @@
     background-color: green;
     padding: 5px 10px;
     color: white;
+    border-radius: 7px;
+    font-weight: 900;
 
+}
+
+.Button:hover{
+    color: grey;
 }
